--- a/DayDayUp/Views/HomePage.xaml
+++ b/DayDayUp/Views/HomePage.xaml
@@ -41,14 +41,9 @@
           CornerRadius="4">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock x:Name="Title"
-                   Text="Home"
-                   Style="{StaticResource TitleTextStyle}" />
-        <Grid Grid.Row="1"
-              Margin="0,0,0,12">
+        <Grid Margin="0,0,0,12">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
@@ -86,7 +81,7 @@
                 </muxc:DropDownButton.Flyout>
             </muxc:DropDownButton>
         </Grid>
-        <SplitView  Grid.Row="2"
+        <SplitView  Grid.Row="1"
                     x:Name="HomeSplitView"
                     IsPaneOpen="False"
                     OpenPaneLength="300"
