--- a/DayDayUp/App.xaml
+++ b/DayDayUp/App.xaml
@@ -43,12 +43,12 @@
                     <Thickness x:Key="ControlBorderThemeThickness">0</Thickness>
                     <Thickness x:Key="HighContrastThicknessTop">0,0,0,0</Thickness>
                     <x:Double x:Key="HighContrastStrokeThickness">0</x:Double>
-                    <Color x:Key="ColumnSeriesColor">#fae3d9</Color>
-                    <Color x:Key="LineSeriesColor">#bbded6</Color>
-                    <Color x:Key="PieChartColor0">#515bd4</Color>
-                    <Color x:Key="PieChartColor1">#dd2a7b</Color>
-                    <Color x:Key="PieChartColor2">#feda77</Color>
-                    <Color x:Key="PieChartColor3">#8134af</Color>
+                    <Color x:Key="ColumnSeriesColor">#0ca85d</Color>
+                    <Color x:Key="LineSeriesColor">#9e42cc</Color>
+                    <Color x:Key="PieChartColor0">#0ca85d</Color>
+                    <Color x:Key="PieChartColor1">#9e42cc</Color>
+                    <Color x:Key="PieChartColor2">#cc980c</Color>
+                    <Color x:Key="PieChartColor3">#2b87e3</Color>
                     <Color x:Key="AltHighColor">#FF000000</Color>
                     <Color x:Key="ChromeMediumLowColor">#FF2B2B2B</Color>
                     <Color x:Key="OperatorPanelScrollButtonBackgroundColor">#FF858585</Color>
@@ -68,12 +68,12 @@
                     <Thickness x:Key="ControlBorderThemeThickness">0</Thickness>
                     <Thickness x:Key="HighContrastThicknessTop">0,0,0,0</Thickness>
                     <x:Double x:Key="HighContrastStrokeThickness">0</x:Double>
-                    <Color x:Key="ColumnSeriesColor">#ffb6b9</Color>
-                    <Color x:Key="LineSeriesColor">#8ac6d1</Color>
-                    <Color x:Key="PieChartColor0">#515bd4</Color>
-                    <Color x:Key="PieChartColor1">#dd2a7b</Color>
-                    <Color x:Key="PieChartColor2">#feda77</Color>
-                    <Color x:Key="PieChartColor3">#8134af</Color>
+                    <Color x:Key="ColumnSeriesColor">#72caaf</Color>
+                    <Color x:Key="LineSeriesColor">#c653ff</Color>
+                    <Color x:Key="PieChartColor0">#72caaf</Color>
+                    <Color x:Key="PieChartColor1">#c653ff</Color>
+                    <Color x:Key="PieChartColor2">#ffbe10</Color>
+                    <Color x:Key="PieChartColor3">#2b87e3</Color>
                     <Color x:Key="AltHighColor">#FFF2F2F2</Color>
                     <Color x:Key="ChromeMediumLowColor">#FFE0E0E0</Color>
                     <Color x:Key="OperatorPanelScrollButtonBackgroundColor">#FF858585</Color>
