--- a/src/DayDayUp/Views/DurationPredictionPage.xaml
+++ b/src/DayDayUp/Views/DurationPredictionPage.xaml
@@ -1,11 +1,12 @@
 ﻿<Page x:Class="DayDayUp.Views.DurationPredictionPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:DayDayUp.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:helper="using:DayDayUp.Helpers"
-      mc:Ignorable="d">
+      xmlns:local="using:DayDayUp.Views"
+      mc:Ignorable="d"
+      Height="400">
     
     <Page.Resources>
         <helper:EnumToVisibilityConverter x:Key="TaskStatusConverter" />
@@ -15,31 +16,40 @@
         <helper:DurationToStringConverter x:Key="DurationToStringConverter" />
         <helper:StatusToStringConverter x:Key="StatusToStringConverter" />
         <helper:DateToStringConverter x:Key="DateToStringConverter" />
+        <helper:DoubleToRatioConverter x:Key="DoubleToRatioConverter" />
     </Page.Resources>
-    <Grid>
+    <Grid RowSpacing="12">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" 
-                   Name="EstimatedDuration"
-                   Text="{x:Bind duration}" />
-        <ListView Grid.Row="1"
+        <TextBlock Style="{StaticResource SubsubtitleTextStyle}">
+            <Run Text="Estimated: "/>
+            <Run Text="{x:Bind baseDuration, Converter={StaticResource DurationToStringConverter}}"
+                 FontWeight="Bold"/>
+        </TextBlock>
+        <TextBlock Grid.Row="1"
+                   Text="Prediction Durations + Probabilities"
+                   FontWeight="Bold"/>
+        <ListView Grid.Row="2"
                   Name="PredictiedDurationList"
+                  Loaded="PredictionList_Loaded"
                   ItemsSource="{x:Bind predictiedDurations}"
                   Visibility="{x:Bind predictiedDurations.Count,Converter={StaticResource CountConverter}, Mode=OneWay}">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:predictionItems">
                     <Grid>
                         <TextBlock HorizontalAlignment="Left"
-                                   Text="{Binding DurationMins}" />
+                                   Text="{Binding DurationMins, Converter={StaticResource DurationToStringConverter}}" />
                         <TextBlock HorizontalAlignment="Right"
-                                   Text="{Binding Probability}" />
+                                   Text="{Binding Probability, Converter={StaticResource DoubleToRatioConverter}}" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <RichTextBlock Name="DefaultText"
+        <RichTextBlock Grid.Row="1"
+                       Name="DefaultText"
                        Visibility="{x:Bind predictiedDurations.Count, Converter={StaticResource NegativeCountConverter}, Mode=OneWay}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center">
