--- a/src/DayDayUp/Views/DurationPredictionPage.xaml
+++ b/src/DayDayUp/Views/DurationPredictionPage.xaml
@@ -18,6 +18,7 @@
         <helper:DateToStringConverter x:Key="DateToStringConverter" />
         <helper:DoubleToRatioConverter x:Key="DoubleToRatioConverter" />
     </Page.Resources>
+    
     <Grid RowSpacing="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -26,12 +27,10 @@
         </Grid.RowDefinitions>
         <TextBlock Style="{StaticResource SubsubtitleTextStyle}">
             <Run Text="Estimated: "/>
-            <Run Text="{x:Bind baseDuration, Converter={StaticResource DurationToStringConverter}}"
-                 FontWeight="Bold"/>
+            <Run Text="{x:Bind baseDuration, Converter={StaticResource DurationToStringConverter}}"/>
         </TextBlock>
         <TextBlock Grid.Row="1"
-                   Text="Prediction Durations + Probabilities"
-                   FontWeight="Bold"/>
+                   Text="Prediction Durations + Probabilities"/>
         <ListView Grid.Row="2"
                   Name="PredictiedDurationList"
                   Loaded="PredictionList_Loaded"
@@ -64,7 +63,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <RichTextBlock Grid.Row="1"
+        <RichTextBlock Grid.Row="2"
                        Name="DefaultText"
                        Visibility="{x:Bind predictiedDurations.Count, Converter={StaticResource NegativeCountConverter}, Mode=OneWay}"
                        HorizontalAlignment="Center"
