--- a/src/DayDayUp/UI/Controls/ExpandableSettingControl.xaml
+++ b/src/DayDayUp/UI/Controls/ExpandableSettingControl.xaml
@@ -1,16 +1,15 @@
-﻿<UserControl
-    x:Class="DayDayUp.UI.Controls.ExpandableSettingControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DayDayUp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+﻿<UserControl x:Class="DayDayUp.UI.Controls.ExpandableSettingControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:DayDayUp.UI.Controls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:converters="using:DayDayUp.UI.Converters"
              xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
              mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
-    
+             d:DesignHeight="300"
+             d:DesignWidth="400"
+             CornerRadius="{ThemeResource ControlCornerRadius}">
     <UserControl.Resources>
         <converters:NullToBooleanConverter x:Key="NullToTrueConverter" />
         <converters:NullToBooleanConverter x:Key="NullToFalseConverter"
